# todo-rs

./: .env  Cargo.toml  README.md  docker-compose.yml
migrations/2022-07-22-031755_create_todos/: up.sql
src/: cli.rs  database.rs  main.rs  models.rs  schema.rs  subcommands.rs
